# DistribuidosP0

./: CMakeCache.txt  CMakeLists.txt  Makefile  client  client.cpp  clientObjects  clientPerson.cpp  clientPersonas.cpp  cmake_install.cmake  main.cpp  operaciones.h  operations.h  person.h  personPepito.txt  persona.h  persona_imp.h  persona_stub.h  server  server.cpp  serverObjects  serverObjects.cpp
.ssh/: ErCoCo  ErCoCo.pub  token
LibUtils/libreria_utils_ejemplo0/: client.cpp  operaciones.cpp  operaciones.h  operaciones_imp.cpp  operaciones_stub.cpp  operaciones_stub.h  server.cpp
